:wrench: Rebuilding signup

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -11,6 +11,8 @@ $hover: #0582CA;
 
 $orange-1: #D7B377;
 
+$jaune-1: #F4D35E;
+
 $border-color: #3C3744;
 
 $box-shadow-1: 0px 0px 20px -5px rgba(0, 0, 0, 1);
