adding test for new cat

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,19 +1,21 @@
 /* Misc */
 
+$base-grey: rgba(255, 255, 255, 1);
 $vue-color: #856600;
 $danger-color: #ea4d46;
 
-$blue-1: #2A628F;
-$blue-2: #1B3B6F;
-$blue-3: #13293D;
+$blue-1: #2a628f;
+$blue-2: #1b3b6f;
+$blue-3: #13293d;
 
-$hover: #0582CA;
+$hover: #0582ca;
+$background-over: #f9cb40;
 
-$orange-1: #D7B377;
+$orange-1: #d7b377;
 
-$jaune-1: #F4D35E;
+$jaune-1: #f4d35e;
 
-$border-color: #3C3744;
+$border-color: #3c3744;
 
 $box-shadow-1: 0px 0px 20px -5px rgba(0, 0, 0, 1);
 
